# faceium-backend

./: .gitignore  main.py  pyproject.toml
api/: urls.py  views.py
config/: settings.py
employees/: admin.py  models.py  serializers.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_rename_end_date_vocation_end_and_more.py  0003_vocation_type.py  0004_alter_vocation_created_alter_vocation_updated.py  0005_employee_is_accept.py  0006_alter_accesscontrol_created_alter_employee_uuid.py
users/: admin.py
